fixed spacing

--- a/styles/movies.css
+++ b/styles/movies.css
@@ -28,13 +28,13 @@
 .movie-cover{
     align-items: center;
     margin-right: 2em;
-    width: 40%;
+    width: fit-content;
 }
 
 .movie-cover img{
     border-radius: var(--border-radius);
     border: 2px solid white;
-    max-height: 100%;
+    height: 100%;
 }
 .movie-genres-box{
     display: flex;
